--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chicle&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <link
-      rel="shortcut icon"
-      href="LOGOOK.png"
-      type="image/x-icon"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="shortcut icon"
-      href="LOGOOK.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="LOGOOK.png" type="image/x-icon"/>
     <title>Christmas is you</title>
 </head>
 <body>
@@ -57,17 +47,17 @@
   </div>
   <header>
     <nav class="navbar">
-        <div class="left">
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="LOGOOK.png" alt="LOGO"></a>
-        </div>
-        <div class="right">
-            <ul class="list" class="nav flex-column">
-                <li><a href="#" target="_blank" rel="noopener noreferrer">Cómo funciona</a></li>
-                <li><a href="#" target="_blank" rel="noopener noreferrer">Reyes Magos</a></li>
-                <li><a href="#" target="_blank" rel="noopener noreferrer">Papá Noel</a></li>
-                <li><a href="#" target="_blank" rel="noopener noreferrer">Contacto</a></li>
-            </ul>
-        </div>    
+      <div class="left">
+        <a href="#" target="_blank" rel="noopener noreferrer"><img src="LOGOOK.png" alt="LOGO"></a>
+      </div>
+      <div class="right">
+        <ul class="list" class="nav flex-column">
+          <li><a href="#" target="_blank" rel="noopener noreferrer">Cómo funciona</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">Reyes Magos</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">Papá Noel</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">Contacto</a></li>
+        </ul>
+      </div>    
     </nav>
   </header>
   <section>
