--- a/contacto.html
+++ b/contacto.html
@@ -34,8 +34,8 @@
         </nav>
       </header>
 <section>
-  <div class="singupFrm container-flex"
-   <form action="formulario" class="form">
+  <div class="singupFrm"
+   <form action="" class="form">
      <h1 class="text-center ">Contacta con Nosotros</h1>
       <div class="inputContainer">
         <input type="text" class="input" placeholder=" " required>
@@ -62,10 +62,9 @@
             <input class="form-check-input" type="checkbox" id="gridCheck">
             <label class="form-check-label" for="gridCheck">Verificar<label>
           </div>
-        </div>
-
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary">Enviar</button>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </div>
         </div>
      </form>
     </div>
@@ -73,7 +72,7 @@
 
 
       <footer>
-        <div class="contenedor">
+        <div class="container">
           <div class="row">
             <div class="col">
               <h5>Christmas is you</h5>
