ultimos cambios emma

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
       </div>
       <div class="right">
         <ul class="list" class="nav flex-column">
-          <li><a href="#" target="_blank" rel="noopener noreferrer">Cómo funciona</a></li>
+          <li><a href="./funcionamiento.html" target="_blank" rel="noopener noreferrer">Cómo funciona</a></li>
           <li><a href="#" target="_blank" rel="noopener noreferrer">Reyes Magos</a></li>
           <li><a href="#" target="_blank" rel="noopener noreferrer">Papá Noel</a></li>
-          <li><a href="#" target="_blank" rel="noopener noreferrer">Contacto</a></li>
+          <li><a href="./contacto.html" target="_blank" rel="noopener noreferrer">Contacto</a></li>
         </ul>
       </div>    
     </nav>
   </header>
-  <section>
+  <section class="parteEmma">
     <div class="flex-row">
       <div class="card1">
         <h5>Reyes Magos</h5>
@@ -81,7 +81,7 @@
           <h5>Christmas is you</h5>
             <ul>
               <li>
-                <a href="" target="_blank" rel="noopener noreferrer" class="list-link">Como funciona</a>
+                <a href="./funcionamiento.html" target="_blank" rel="noopener noreferrer" class="list-link">Como funciona</a>
               </li>
               <li>
                 <a href="" target="_blank" rel="noopener noreferrer" class="list-link">Reyes Magos</a>
@@ -90,7 +90,7 @@
                 <a href="" target="_blank" rel="noopener noreferrer" class="list-link">Papá Noel</a>
               </li>
               <li>
-                <a href="" target="_blank" rel="noopener noreferrer" class="list-link">Contacto</a>
+                <a href="./contacto.html" target="_blank" rel="noopener noreferrer" class="list-link">Contacto</a>
               </li>
             </ul>
         </div>
