últimos cambios Laura

--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
 
     <title>Christmas is you</title>
 </head>
-<body>
+<body class="verde">
     <header>
         <nav class="navbar">
             <div class="left">
@@ -33,46 +33,47 @@
             </div>    
         </nav>
       </header>
-<section>
-  <div class="singupFrm"
-   <form action="" class="form">
-     <h1 class="text-center ">Contacta con Nosotros</h1>
-      <div class="inputContainer">
+
+  <section class="contacto">   
+    <div class="singupFrm container" 
+      <form action="" class="form>"
+        <h1>Contacta con Nosotros</h1>
+         <div class="inputContainer">
         <input type="text" class="input" placeholder=" " required>
         <label for="" class="label">Nombre</label>
-        </div>
+         </div>
 
-        <div class="inputContainer">
+         <div class="inputContainer">
           <input type="text" class="input" placeholder=" " required>
           <label for="" class="label">Email</label>
-        </div>
+         </div>
 
-        <div class="inputContainer">
+         <div class="inputContainer">
           <input type="text" class="input" placeholder=" " required>
           <label for="" class="label">Motivo consulta</label>
-        </div>
+         </div>
 
-        <div class="inputContainer">
+         <div class="inputContainer">
          <input type="textarea" class="input" placeholder=" " required>
          <label for="" class="label">Cuéntanos</label>
-        </div>
+         </div>
        
-        <div class="col-12">
-          <div class="form-check">
+         <div class="col-12">
+         <div class="form-check">
             <input class="form-check-input" type="checkbox" id="gridCheck">
             <label class="form-check-label" for="gridCheck">Verificar<label>
-          </div>
+         </div>
           <div class="col-12">
             <button type="submit" class="btn btn-primary">Enviar</button>
           </div>
-        </div>
-     </form>
-    </div>
-  </section>
-
+         </div>
+        </fom> 
+     </div>
+  </section> 
+  <img class="snowMan" src="./pngwing.com.png" alt="imágen muñeco de nieve">
 
       <footer>
-        <div class="container">
+        <div class="contenedor">
           <div class="row">
             <div class="col">
               <h5>Christmas is you</h5>
