parte silvia II
No hago cambios en html ni en sass, unicamente vinculo la hoja de estilo al html y se ve correcto. Subo solo mi html junto al sass para que no se desvincule.
FIN

--- a/papanoel.html
+++ b/papanoel.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Chicle&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Roboto:ital,wght@0,300;0,400;1,100&display=swap"
       rel="stylesheet"
