--- a/reyes.html
+++ b/reyes.html
@@ -31,14 +31,14 @@
     <header>
         <nav class="navbar">
             <div class="left">
-                <a href="#" target="_blank" rel="noopener noreferrer"><img src="./LOGOOK.png" alt="LOGO"></a>
+                <a href="http://127.0.0.1:5500/index.html" target="_blank" rel="noopener noreferrer"><img src="./LOGOOK.png" alt="LOGO"></a>
             </div>
             <div class="right">
                 <ul class="list" class="nav flex-column">
-                    <li><a href="#" target="_blank" rel="noopener noreferrer">Cómo funciona</a></li>
+                    <li><a href="./funcionamiento.html" target="_blank" rel="noopener noreferrer">Cómo funciona</a></li>
                     <li><a href="#" target="_blank" rel="noopener noreferrer">Reyes Magos</a></li>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer">Papá Noel</a></li>
-                    <li><a href="#" target="_blank" rel="noopener noreferrer">Contacto</a></li>
+                    <li><a href="http://127.0.0.1:5500/papanoel.html" target="_blank" rel="noopener noreferrer">Papá Noel</a></li>
+                    <li><a href="./contacto.html" target="_blank" rel="noopener noreferrer">Contacto</a></li>
                 </ul>
             </div>    
         </nav>
@@ -89,16 +89,16 @@ La Carta tiene un precio fijo sin importar donde se envíe. La Carta de los Reye
           <h5>Christmas is you</h5>
             <ul>
               <li>
-                <a href="" target="_blank" rel="noopener noreferrer" class="list-link">Como funciona</a>
+                <a href="./funcionamiento.html" target="_blank" rel="noopener noreferrer" class="list-link">Como funciona</a>
               </li>
               <li>
                 <a href="" target="_blank" rel="noopener noreferrer" class="list-link">Reyes Magos</a>
               </li>
               <li>
-                <a href="" target="_blank" rel="noopener noreferrer" class="list-link">Papá Noel</a>
+                <a href="http://127.0.0.1:5500/papanoel.html" target="_blank" rel="noopener noreferrer" class="list-link">Papá Noel</a>
               </li>
               <li>
-                <a href="" target="_blank" rel="noopener noreferrer" class="list-link">Contacto</a>
+                <a href="./contacto.html" target="_blank" rel="noopener noreferrer" class="list-link">Contacto</a>
               </li>
             </ul>
         </div>
