--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
   <header>
     <nav class="navbar">
       <div class="left">
-        <a href="#" target="_blank" rel="noopener noreferrer"><img src="LOGOOK.png" alt="LOGO"></a>
+        <a href="http://127.0.0.1:5500/index.html" target="_blank" rel="noopener noreferrer"><img src="LOGOOK.png" alt="LOGO"></a>
       </div>
       <div class="right">
         <ul class="list" class="nav flex-column">
           <li><a href="./funcionamiento.html" target="_blank" rel="noopener noreferrer">Cómo funciona</a></li>
           <li><a href="#" target="_blank" rel="noopener noreferrer">Reyes Magos</a></li>
-          <li><a href="#" target="_blank" rel="noopener noreferrer">Papá Noel</a></li>
+          <li><a href="http://127.0.0.1:5500/papanoel.html" target="_blank" rel="noopener noreferrer">Papá Noel</a></li>
           <li><a href="./contacto.html" target="_blank" rel="noopener noreferrer">Contacto</a></li>
         </ul>
       </div>    
@@ -70,7 +70,7 @@
       <div class="card2">
         <h5>Papá Noel</h5>
         <p>¡Pide tus regalos a Papá Noel desde aquí!</p>
-        <a class="dorado" href="#" target="_blank" rel="noopener noreferrer">Aquí</a>
+        <a class="dorado" href="http://127.0.0.1:5500/papanoel.html" target="_blank" rel="noopener noreferrer">Aquí</a>
       </div>  
     </div>   
   </section>
@@ -87,7 +87,7 @@
                 <a href="" target="_blank" rel="noopener noreferrer" class="list-link">Reyes Magos</a>
               </li>
               <li>
-                <a href="" target="_blank" rel="noopener noreferrer" class="list-link">Papá Noel</a>
+                <a href="http://127.0.0.1:5500/papanoel.html" target="_blank" rel="noopener noreferrer" class="list-link">Papá Noel</a>
               </li>
               <li>
                 <a href="./contacto.html" target="_blank" rel="noopener noreferrer" class="list-link">Contacto</a>
