--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar">
             <div class="left">
-                <a href="#" target="_blank" rel="noopener noreferrer"><img src="LOGOOK.png" alt="LOGO"></a>
+                <a href="http://127.0.0.1:5500/index.html" target="_blank" rel="noopener noreferrer"><img src="LOGOOK.png" alt="LOGO"></a>
             </div>
             <div class="right">
                 <ul class="list" class="nav flex-column">
