--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
   <header>
     <nav class="navbar">
       <div class="left">
-        <a href="http://127.0.0.1:5500/index.html" target="_blank" rel="noopener noreferrer"><img src="LOGOOK.png" alt="LOGO"></a>
+        <a href="./index.html" target="_blank" rel="noopener noreferrer"><img src="LOGOOK.png" alt="LOGO"></a>
       </div>
       <div class="right">
         <ul class="list" class="nav flex-column">
           <li><a href="./funcionamiento.html" target="_blank" rel="noopener noreferrer">Cómo funciona</a></li>
           <li><a href="#" target="_blank" rel="noopener noreferrer">Reyes Magos</a></li>
-          <li><a href="http://127.0.0.1:5500/papanoel.html" target="_blank" rel="noopener noreferrer">Papá Noel</a></li>
+          <li><a href="./papanoel.html" target="_blank" rel="noopener noreferrer">Papá Noel</a></li>
           <li><a href="./contacto.html" target="_blank" rel="noopener noreferrer">Contacto</a></li>
         </ul>
       </div>    
